--- a/CPP/c++11系列.md
+++ b/CPP/c++11系列.md
@@ -4,3 +4,5 @@
 [C++11学习之——bind关键字及偏函数](http://note.youdao.com/noteshare?id=a9b50f166a6a8483c97419677d0b3845&sub=5427F359A6164A9FB264EC220961D715)
 
 [C++11学习之——多线程编程](http://note.youdao.com/noteshare?id=48778a55497e25dd6f2928803f0b7575&sub=4E8BE23D17AA47D19AFC533954AE652F)
+
+[c++11学习之——override关键字及重载、覆盖、隐藏](http://note.youdao.com/noteshare?id=49e079009f7f3c47c590a4502b9b79a0&sub=B7531117E97C4A01BDAC40131F8A7301)
