--- a/CPP/c++11系列.md
+++ b/CPP/c++11系列.md
@@ -6,3 +6,7 @@
 [C++11学习之——多线程编程](http://note.youdao.com/noteshare?id=48778a55497e25dd6f2928803f0b7575&sub=4E8BE23D17AA47D19AFC533954AE652F)
 
 [c++11学习之——override关键字及重载、覆盖、隐藏](http://note.youdao.com/noteshare?id=49e079009f7f3c47c590a4502b9b79a0&sub=B7531117E97C4A01BDAC40131F8A7301)
+
+[C++ 11学习之从一个项目例子看static_assert、is_base_of等关键字](http://note.youdao.com/noteshare?id=803784bcdb4b9c0895363450b2e29915&sub=FC50A718F2054926AB9467C9625CD9EE)
+
+[c++11学习之右值引用](http://note.youdao.com/noteshare?id=914320625a5a5253cf60918db48735ee&sub=239FFB7369C047B2A2137C85132EEA8A)
