--- a/架构设计及设计模式/项目架构和设计模式.md
+++ b/架构设计及设计模式/项目架构和设计模式.md
@@ -2,3 +2,4 @@
 
 [项目架构设计模式之二——三种工厂模式](http://note.youdao.com/noteshare?id=4fabfc7eba9db6df8bfb21b94268f739&sub=12F183DD4BDD4EA4814E7141E67E442D)
 
+[项目架构设计模式之三——OOP/FP观察者模式](http://note.youdao.com/noteshare?id=65814b4e4b0f424b80865b9d91c3769f&sub=BFA3E32401BF4961BE2A80F8A7B381A2)
