--- a/CPP/c++11系列.md
+++ b/CPP/c++11系列.md
@@ -9,4 +9,6 @@
 
 [C++ 11学习之从一个项目例子看static_assert、is_base_of等关键字](http://note.youdao.com/noteshare?id=803784bcdb4b9c0895363450b2e29915&sub=FC50A718F2054926AB9467C9625CD9EE)
 
-[c++11学习之右值引用](http://note.youdao.com/noteshare?id=914320625a5a5253cf60918db48735ee&sub=239FFB7369C047B2A2137C85132EEA8A)
+[C++11学习之右值引用](http://note.youdao.com/noteshare?id=914320625a5a5253cf60918db48735ee&sub=239FFB7369C047B2A2137C85132EEA8A)
+
+[C++11学习之从一个线程池看c++11新特性](http://note.youdao.com/noteshare?id=6f392d705d54ed02a726fe49f84fa4ee&sub=60E2883EBB294794BA6D1E0D71CAD501)
