--- a/doc/郑胜阳简历.md
+++ b/doc/郑胜阳简历.md
@@ -1,147 +1,1 @@
-## 个人信息
-#### - 郑胜阳/男/1990
-#### - 本科/杭州电子科技大学计算机学院网络工程
-#### - 工作年限: 3年
-#### - [Github:](https://github.com/echopairs)
-#### - 期待职位: Linux C/C++高级工程师、系统架构师
-#### - 期待薪资: 税前23k~27k,特别喜欢的公司可例外
-#### - 期望城市: 杭州
-
-
-
-
-## 技能清单
-#### 1. linux下项目搭建、代码组织、自动化管理、软件规范部署、单元测试、编程规范
-#### 2. 掌握 C/C++，热爱C++11开发
-#### 3. 对多线程编程有着深刻的理解
-#### 4. 熟悉OOP，各种设计模式及OOP六大设计原则，习惯于面向接口编程。对FP编程有自己的了解
-#### 4. 系统学习且实践过基于epoll各种网络模型，IO模型及对应的多线程模型
-#### 5. 熟悉linux系统，熟练掌握shell。
-#### 6. 能独立完成简单python模块及工程组织结构
-#### 7. Node.js
-#### 8. RPC、消息队列、分布式、集群
-#### 9. 热爱新技术、热爱分享。
-#### 10. 极佳的工程能力，编程能力、架构能力
-
-
-## 工作经历
-### 南江机器人/杭州迦智科技(2016年6月~至今)
-
-#### 一、jrpc项目
-**项目背景:** 机器人各进程节点消息交互，请求服务底层网络框架。
-
-**项目实现:**   [jrpc项目实现](http://note.youdao.com/noteshare?id=108f6c22dbf3031ffd36771a008d1ad4&sub=03CF8208752145CCB63D657C268CD76C)
-
-**相应职责及完成情况:** 独立完成整个项目的设计编码，自动化测试框架搭建和部署工作。作为公司底层通信交互的框架，同时完成相应的python版本。
-
-#### 二、nros项目
-相对于jrpc项目，增加了一个中间节点，用于服务发现。每个节点启动时，通过向中间节点注册自己能提供服务，需要什么服务。中间节点主要作用于协助建立各节点间的连接映射。
-
-**项目完成情况:** 以应用于菜鸟仓库、华为等无人车中
-
-#### 三、nmotion项目
-
-**项目背景:** 服务机器人运动控制进程节点及运动控制模块
-
-**项目实现:** 根据业务拆分为，定位、激光、手臂控制、头部控制等模块。整体架构为pimpl手法。
-
-**项目职责及完成情况:** 完成手臂控制模块，头部控制模块，以及激光模块。根据数据流，api层(外部发送指令或请求数据)->业务逻辑层(构造响应的指令)->网络层(向串口或者网络发送指令)。激光实现则为一个线程中通过一个loop循环不断获取激光数据，然后解析，存放在内存队列中，外部api层来获取请求激光数据指令后，把数据返回。 
-
-**关于整体架构文档:** [ 桥接模式及pimpl技术](http://note.youdao.com/noteshare?id=ed4629e0daef3a048be90ee3349733e9&sub=EC6D608D67F442F7B86AF0D1F94E9F75)
-
-#### 四、百度熊项目
-**项目背景:** 给百度制作的机器人，提供控制手臂，头部，运动等动作的api接口。
-
-**项目实现:** 具体实现参照nmotion的架构模型，利用pimpl手法，区别在于中间逻辑层构建指令协议不同。
-
-**完成情况:** 已交付百度使用
-
-#### 其他: 略
-
-### 浙江宇视科技有限公司(2015年6月-2016年6月)
-
-#### 一、IAFA(智能人脸分析)项目
-
-**项目背景:** 宇视科技人脸识别项目。
-
-**负责模块及完成情况:** 数据发送模块和本地存储模块，以及产品化脚本
-负责模块:数据发送模块和本地存储模块,以及产品化脚本
-
-**模块实现:** 业务需求,发送的类型分为图片的黑名单告警和抓拍功能，相机抓拍到图片后,会发送到向服务器注册的各个客户端。实现，抽象出发送接口,根据业务需求继承实现发送接口,使用观察者和订阅者模式来实现给注册的用户发送抓拍和黑名单告警消息。
-**产品化脚本:** 实现产品制作成RPM包,启停脚本等。
-
-
-
-#### 二、IA10500( 分布式计算框架智能集群项目)
-**项目背景:** 宇视科技计算框架集群项目，用于处理宇视科技各项业务。如车牌识别、车型识别、人脸识别等。
-
-**负责模块及完成情况:** 
-#### 1. 工具链及脚本工作
-1.1 自动化脚本(构建第三方库等依赖)，工具链的搭建(cmake搭建编译环境，利用objcopy命令分离出debug消息， rpmbuild来制作RPM包)
-
-1.2 在centos7下，把程序制作为系统服务。
-
-1.3 产品化相关工作
-
-#### 2. 编码工作
-##### 2.1. 参与整个软件设计架构。整体项目基于抽象工厂
-具体实现参照项目: [factory](https://github.com/echopairs/factory)
-
-关于三种工厂模式的理解文档: [项目架构设计模式之二——三种工厂模式](http://note.youdao.com/noteshare?id=4fabfc7eba9db6df8bfb21b94268f739&sub=12F183DD4BDD4EA4814E7141E67E442D)
-
-
-##### 2.2. 任务调度模块(url获取，分发，负载均衡)
-
-所有的任务都是对url的处理，所以根据项目的架构，有一个工厂负责产生跟数据(url)处理相关的任务。分别为
-
-1. 从大数据中获取url任务(相机id+大数据链接构造一个任务)
-2. 处理结果上报给大数据任务
-3. 超时回收分配给底下运算机器的任务
-
-**具体实现参照:** 2.1项目factory的实现
-
-**tips:** 根据数据流分为四个队列
-1. 待分析队列 (数据入口: url从大数据获取后插入，以及超时从正在分析队列中回收插入。出口:为底下计算机器来取)
-2. 正在分析队列(入口:底下计算机器来取后url任务从待分析队列到正在分析队列，出口:超时回收，底下上报分析结果后移入待分析队列)
-3. 待上报队列(入口: 底下计算机器上报分析结果后，从正在分析队列移入。出口: 上报大数据)
-
-
-## 开源项目和作品
-[pub/sub framework based on zeromq && protobuf](https://github.com/echopairs/zpub)
-
-[Task-based project based on the abstract factory pattern](https://github.com/echopairs/factory)
-
-[reflection](https://github.com/echopairs/reflection)
-
-[how-to-build-toolchain](https://github.com/echopairs/how-to-build-toolchain)
-
-[The-network-thread-model](https://github.com/echopairs/The-network-thread-model)
-
-[threadpool](https://github.com/echopairs/nsky/blob/master/include/nsky/common/thread_pool.h)
-
-[singleton](https://github.com/echopairs/nsky/blob/master/include/nsky/common/singleton.h/)
-
-## 技术文章
-[pimpl](http://note.youdao.com/noteshare?id=ed4629e0daef3a048be90ee3349733e9&sub=EC6D608D67F442F7B86AF0D1F94E9F75)
-
-[c++11多线程学习](http://note.youdao.com/noteshare?id=48778a55497e25dd6f2928803f0b7575&sub=4E8BE23D17AA47D19AFC533954AE652F)
-
-[浅谈三种工厂模式以及抽象工厂模式在大型工程项目中实践](http://note.youdao.com/noteshare?id=4fabfc7eba9db6df8bfb21b94268f739&sub=12F183DD4BDD4EA4814E7141E67E442D)
-
-[linux服务端编程](http://note.youdao.com/noteshare?id=03ba00504f9a52230fe1921c5103beac&sub=BC354F722A09494D8F7419D25A2D5E30)
-
-[搭建自动化测试](http://note.youdao.com/noteshare?id=532254a60570568e7a2d1434966c46b5&sub=B55EC0903F1F4059A16CBC409C9FC28B)
-
-[持续更新中......](https://github.com/echopairs/blog)
-
-## 联系方式
-
-**手机:** 18758877647
-
-**Email:** 736418319@qq.com
-
-**QQ:** 736418319
-
-
-### 致谢
-感谢您花时间阅读我的简历，期待能有机会和您共事。
+[郑胜阳简历](http://note.youdao.com/noteshare?id=7c104e6c4bc040980cc58cf9efa16382&sub=4D477645DD684E0AA1D61426648C8D34)
